--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -1,3 +1,3 @@
 <%= form_tag "/auth/google_oauth2", data: { turbo: false } do %>
-  <%= submit_tag "Sign in with Google" %>
+  <%= submit_tag t("buttons.sign_in_with_google") %>
 <% end %>
