--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<title><%= content_for(:title) || "Holidays" %></title>
+<title><%= content_for(:title) || t("app.name") %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
 <link rel="icon" href="/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/icon.png">
 
-<%# Includes all stylesheet files in app/assets/stylesheets %>
+<%# Включва всички stylesheet файлове в app/assets/stylesheets %>
 <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
 <%= stylesheet_link_tag "pico.min", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
