--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "New property" %>
-<%= render_nav title: "New property" %>
+<% content_for :title, t("titles.new_property") %>
+<%= render_nav title: t("titles.new_property") %>
 
 <%= render "form", property: @property %>
