--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "Holidays",
+  "name": "<%= t('pwa.name') %>",
   "icons": [
     {
       "src": "/icon.png",
@@ -17,9 +17,9 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "Holidays. An app to manage bookings",
+  "description": "<%= t('pwa.description') %>",
   "theme_color": "#0172ad",
   "background_color": "#0172ad",
   "orientation": "portrait-primary",
-  "short_name": "hdays"
+  "short_name": "<%= t('pwa.short_name') %>"
 }
