--- a/app/views/admin/accounts/edit.html.erb
+++ b/app/views/admin/accounts/edit.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Edit account | #{@account.name}" %>
+<% content_for :title, t("admin.titles.edit_account") + " | #{@account.name}" %>
 
-<h1>Edit account</h1>
+<h1><%= t("admin.titles.edit_account") %></h1>
 
 <%= render "form", account: @account %>
-<%= link_to "Back", admin_accounts_path, class: "button" %>
+<%= link_to t("admin.buttons.back"), admin_accounts_path, class: "button" %>
