--- a/app/views/admin/accounts/new.html.erb
+++ b/app/views/admin/accounts/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "New account" %>
+<% content_for :title, t("admin.titles.new_account") %>
 
-<h1>New account</h1>
+<h1><%= t("admin.titles.new_account") %></h1>
 
 <%= render "form", account: @account %>
-<%= link_to "Back", admin_accounts_path, class: "button" %>
+<%= link_to t("admin.buttons.back"), admin_accounts_path, class: "button" %>
