--- a/app/views/admin/authorized_users/new.html.erb
+++ b/app/views/admin/authorized_users/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "New authorized user" %>
+<% content_for :title, t("admin.titles.new_authorized_user") %>
 
-<h1>New authorized user</h1>
+<h1><%= t("admin.titles.new_authorized_user") %></h1>
 
 <%= render "form", authorized_user: @authorized_user %>
-<%= link_to "Back", admin_authorized_users_path, class: "button" %>
+<%= link_to t("admin.buttons.back"), admin_authorized_users_path, class: "button" %>
