--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Edit user | #{@user.name}" %>
+<% content_for :title, t("admin.titles.edit_user") + " | #{@user.name}" %>
 
-<h1>Edit user</h1>
+<h1><%= t("admin.titles.edit_user") %></h1>
 
 <%= form_with model: [:admin, @user] do |form| %>
   <div>
@@ -29,8 +29,8 @@
   </div>
 
   <div>
-    <%= form.label :account_id, "Account" %>
-    <%= form.collection_select :account_id, Account.all, :id, :name, include_blank: "No Account" %>
+    <%= form.label :account_id, t("common.account") %>
+    <%= form.collection_select :account_id, Account.all, :id, :name, include_blank: t("admin.messages.na") %>
   </div>
 
   <div>
@@ -38,4 +38,4 @@
   </div>
 <% end %>
 
-<%= link_to "Back", admin_users_path, class: "button" %>
+<%= link_to t("admin.buttons.back"), admin_users_path, class: "button" %>
