--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,16 +1,16 @@
-<h1>Users</h1>
+<h1><%= t("admin.titles.users") %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Admin</th>
-      <th>Account</th>
-      <th>Actions</th>
+      <th><%= t("common.id") %></th>
+      <th><%= t("common.name") %></th>
+      <th><%= t("common.email") %></th>
+      <th><%= t("common.first_name") %></th>
+      <th><%= t("common.last_name") %></th>
+      <th><%= t("common.admin") %></th>
+      <th><%= t("common.account") %></th>
+      <th><%= t("common.actions") %></th>
     </tr>
   </thead>
   <tbody>
@@ -21,11 +21,11 @@
         <td><%= user.email_address %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= user.admin? ? "Yes" : "No" %></td>
-        <td><%= user.account&.name || "N/A" %></td>
+        <td><%= user.admin? ? t("admin.messages.yes") : t("admin.messages.no") %></td>
+        <td><%= user.account&.name || t("admin.messages.na") %></td>
         <td>
-          <%= link_to "Edit", edit_admin_user_path(user) %> |
-          <%= button_to "Delete", admin_user_path(user), method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+          <%= link_to t("admin.buttons.edit"), edit_admin_user_path(user) %> |
+          <%= button_to t("admin.buttons.delete"), admin_user_path(user), method: :delete, data: { turbo_confirm: t("admin.messages.confirm_delete") } %>
         </td>
       </tr>
     <% end %>
