feat: adds prices and amounts to bookings

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -36,6 +36,11 @@
   </div>
 
   <div>
+    <%= form.label :price %>
+    <%= form.number_field :price, step: "0.01", min: 0 %>
+  </div>
+
+  <div>
     <%= form.label :notes %>
     <%= form.text_area :notes %>
   </div>
