--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div>
-    <%= form.label :price %>
+    <%= form.label t("common.price_per_night") %>
     <%= form.number_field :price, step: "0.01", min: 0 %>
   </div>
 
