--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div>
+    <%= form.label t("common.price_per_night") %>
+    <%= form.number_field :price, step: "0.01", min: 0 %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
