feat: booking prices (#57)

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -14,7 +14,7 @@
   <div>
     <%= form.label :room_id %>
     <% if local_assigns[:available_rooms].present? %>
-      <%= form.select :room_id, options_for_select(available_rooms.map { |r| [r.name, r.id] }, booking&.room&.id), { include_blank: t("common.select_room") }, required: true %>
+      <%= form.select :room_id, options_for_select(available_rooms.map { |r| [r.name, r.id] }, booking&.room&.id), { include_blank: t("common.select_room") }, required: true, data: { action: "change->form-reload#trigger" } %> <%# trigger price change %>
     <% else %>
       <%= form.select :room_id, [], { include_blank: t("common.select_dates") }, disabled: true %>
     <% end %>
@@ -32,8 +32,25 @@
 
   <div>
     <%= form.label :deposit %>
-    <%= form.number_field :deposit, step: "0.01", min: 0 %>
+    <%= form.number_field :deposit, step: "0.01", min: 0, placeholder: "0.00", value: number_with_precision(booking&.deposit, precision: 2) %>
   </div>
+
+  <div data-controller="booking-price">
+    <%
+      room_price = booking&.room&.price
+      price_disabled = room_price.present? && (booking.price == room_price)
+    %>
+    <%= form.label t("common.price_per_night") %>
+    <%= form.number_field :price, step: "0.01", min: 0, placeholder: "0.00", value: number_with_precision(booking&.price, precision: 2), disabled: price_disabled, data: { booking_price_target: "price" } %>
+    <% if room_price %>
+      <label class="m-1">
+        <%= check_box_tag :use_room_price, "1", booking.price == room_price, data: { action: "booking-price#checkRoomPrice" } %>
+        <%= "#{number_with_precision(room_price, precision: 2)} лв. - #{t("common.room")} #{booking.room.name}" %>
+      </label>
+      <br>
+    <% end %>
+  </div>
+
 
   <div>
     <%= form.label :notes %>
