feat: add name to bookings

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -21,6 +21,11 @@
   </div>
 
   <div>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
     <%= form.label :adults %>
     <%= form.number_field :adults %>
   </div>
