--- a/app/views/bookings/day.html.erb
+++ b/app/views/bookings/day.html.erb
@@ -26,6 +26,9 @@
             </header>
           <% end %>
           <dl>
+            <dt><%= t("common.name") %></dt>
+            <dd><%= b.name %></dd>
+
             <dt><%= t("common.room") %></dt>
             <dd><%= room_badge b.room %></dd>
 
