--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,6 +7,9 @@
 
 <div class="bookings-show">
   <dl>
+    <dt><%= t("common.name") %></dt>
+    <dd><%= @booking.name %>
+
     <dt><%= t("common.room") %></dt>
     <dd><%= @booking.room.name %>
 
